crates/sesh-integration-tests/src/snapshots/sesh_integration_tests__parser__tests__captures_bad_filters_as_error.snap
---
source: crates/sesh-integration-tests/src/parser.rs
expression: "Script::parse(&[r#\":snap \"\"\"#, r#\":snap /foo\"#, r#\":snap /foo/x/\"#,\nr#\":snap /foo/bar\"#, r#\":snap /foo/\"#,].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Error {
                message: "empty filter string",
            },
            raw: ":snap \"\"",
        },
        Line {
            kind: Error {
                message: "missing separator delimiter",
            },
            raw: ":snap /foo",
        },
        Line {
            kind: Error {
                message: "replacement must be one grapheme",
            },
            raw: ":snap /foo/x/",
        },
        Line {
            kind: Error {
                message: "replacement must be one grapheme",
            },
            raw: ":snap /foo/bar",
        },
        Line {
            kind: Error {
                message: "missing replacement grapheme cluster",
            },
            raw: ":snap /foo/",
        },
    ],
}
