crates/sesh-integration-tests/src/snapshots/sesh_integration_tests__parser__tests__captures_bad_shlex_as_error.snap
---
source: crates/sesh-integration-tests/src/parser.rs
expression: "Script::parse(&[\":sh \\\"unterminated\", \"\"].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Error {
                message: "bad shell arguments",
            },
            raw: ":sh \"unterminated",
        },
    ],
}
