crates/sesh-integration-tests/src/snapshots/sesh_integration_tests__parser__tests__captures_command_without_arguments_as_error.snap
---
source: crates/sesh-integration-tests/src/parser.rs
expression: "Script::parse(&[r#\":sh\"#, r#\"\"#].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Error {
                message: "empty directive",
            },
            raw: ":sh",
        },
    ],
}
