crates/sesh-integration-tests/src/snapshots/sesh_integration_tests__parser__tests__captures_invalid_key_as_error.snap
---
source: crates/sesh-integration-tests/src/parser.rs
expression: "Script::parse(&[\":k INVALID\", \"\"].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Error {
                message: "error parsing keys: INVALID\n^\n",
            },
            raw: ":k INVALID",
        },
    ],
}
