crates/sesh-integration-tests/src/snapshots/sesh_integration_tests__parser__tests__captures_invalid_modified_text_keys_as_error.snap
---
source: crates/sesh-integration-tests/src/parser.rs
expression: "Script::parse(&[r#\":k C-ab\"#, r#\":k M-é\"#, r#\":k S-\"\"\"#, r#\"\"#,].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Error {
                message: "modifiers only apply to single key codes",
            },
            raw: ":k C-ab",
        },
        Line {
            kind: Error {
                message: "modifiers only apply to single key codes",
            },
            raw: ":k M-é",
        },
        Line {
            kind: Error {
                message: "modifiers only apply to single key codes",
            },
            raw: ":k S-\"\"",
        },
    ],
}
