crates/sesh-integration-tests/src/snapshots/sesh_integration_tests__parser__tests__captures_invalid_snap_count_as_error.snap
---
source: crates/sesh-integration-tests/src/parser.rs
expression: "Script::parse(&[\":snap --count 0\", \"\"].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Error {
                message: "error: invalid value '0' for '--count <COUNT>': number would be zero for non-zero type\n\nFor more information, try '--help'.\n",
            },
            raw: ":snap --count 0",
        },
    ],
}
