crates/sesh-integration-tests/src/snapshots/sesh_integration_tests__parser__tests__captures_invalid_snap_duration_as_error.snap
---
source: crates/sesh-integration-tests/src/parser.rs
expression: "Script::parse(&[\"    :snap --duration soon\", \"\"].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Error {
                message: "error: invalid value 'soon' for '--duration <DURATION>': invalid duration\n\nFor more information, try '--help'.\n",
            },
            raw: "    :snap --duration soon",
        },
    ],
}
