crates/sesh-integration-tests/src/snapshots/sesh_integration_tests__parser__tests__leaves_unindented_colon_lines_as_text.snap
---
source: crates/sesh-integration-tests/src/parser.rs
expression: "Script::parse(&[\":sh echo nope\", \"\"].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Text,
            raw: ":sh echo nope",
        },
    ],
}
